assignment 6
