# routes/user.js
@@ -1,5 +1,9 @@
 const express = require('express');
 const router = express.Router();
+const {
+    signupValidation,
+    loginValidation
+} = require('../validator');
 
 const userController = require('../controllers/user-data');
 
@@ -7,6 +11,10 @@ router.get('/', userController.getAll);
 
 router.get('/:id', userController.getSingle);
 
-router.post('/', userController.createUser);
+router.post('/register', signupValidation, userController.createUser);
+
+router.put('/:id', signupValidation, userController.updateUser);
+
+router.delete('/:id', userController.deleteUser);
 
 module.exports = router;
